--- a/src/components/stylesheets/sidebar.scss
+++ b/src/components/stylesheets/sidebar.scss
@@ -10,7 +10,7 @@
   background: $glitter;
   transition: width 0.5s ease-in;
   margin: 0;
-  // padding: 0;
+  padding: 0px 15px;
 
   &.expanded {
     width: 20%;
