landing route section tag displays avatar

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,7 +1,7 @@
 @import '../components/stylesheets/colors.scss';
 
 body {
-  background: wheat;
+  font-family: AustinNewsLight, Georgia, serif;
   font-size: 12px;
   font-weight: 300;
   margin: 0;
