--- a/src/components/stylesheets/stagingArea.scss
+++ b/src/components/stylesheets/stagingArea.scss
@@ -1,5 +1,4 @@
 .component {
-  background: green;
   width: 90%;
   min-height: 250px;
   height: 100%;
@@ -7,6 +6,9 @@
   right: 0;
   top: 0;
   transition: width 0.5s linear;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
 
   &.expanded {
     width: 99%;
